fix micrometer-hibernate